kubernetes-cluster/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices-app
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080

          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080

          - path: /products/
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
